--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://192.168.83.129:3306/seckill?useUnicode=true&characterEncoding=utf8
-username=root
-password=zjyt666
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://192.168.83.129:3306/seckill?useUnicode=true&characterEncoding=utf8
+jdbc.username=root
+jdbc.password=zjyt666
