--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://59.67.225.85:7306/seckill?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://59.67.225.85:7306/tz_ggsyc?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=zjyt666
