--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://59.67.225.85:7306/tz_ggsyc?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=zjyt666
+jdbc2.driver=com.mysql.jdbc.Driver
+jdbc2.url=jdbc:mysql://59.67.225.85:7306/dev?useUnicode=true&characterEncoding=utf8
+jdbc2.username=root
+jdbc2.password=zjyt666
